--- a/app/partials/auth/changePass.html
+++ b/app/partials/auth/changePass.html
@@ -1,4 +1,4 @@
-<ng-include src="'partials/header.html'"></ng-include>
+<ng-include src="'partials/guest-header.html'"></ng-include>
 <div style="padding-left: 10%;padding-top: 5%">
     <div>
         <legend>修改密码</legend>
