--- a/app/partials/guest/forgetPass.html
+++ b/app/partials/guest/forgetPass.html
@@ -1,5 +1,6 @@
 <ng-include src="'partials/guest-header.html'"></ng-include>
 <div class="container" style="padding-top: 10% ">
+    <legend>重置密码</legend>
     <div>
         <h5 ng-class="messageClass">{{message}}</h5>
     </div>
