--- a/app/partials/guest/register.html
+++ b/app/partials/guest/register.html
@@ -1,7 +1,8 @@
 <ng-include src="'partials/guest-header.html'"></ng-include>
 <div class="container" style="padding-top:65px">
     <div>
-        <form name="the_form" class="form-horizontal">
+        <legend>欢迎注册</legend>
+        <form name="the_form" class="form-horizontal" style="padding-top: 20px">
             <div class="control-group">
                 <label class="control-label" for="inputAlias">邮箱</label>
                 <div class="controls">
