--- a/app/partials/auth/confirm.html
+++ b/app/partials/auth/confirm.html
@@ -1,4 +1,4 @@
-<ng-include src="'partials/header.html'"></ng-include>
+<ng-include src="'partials/guest-header.html'"></ng-include>
 <div>
     <div style="text-align: center">
         <h3>{{result}}</h3>
