--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -4,6 +4,12 @@
 
     <div class="row-fluid">
         <div id="sound_streams" class="span9">
+            <a href="#" onclick="return false;" ng-click="loadStream('true')" class="pull-right"><i class="icon-refresh"></i></a>
+
+            <div  ng-show="!isloading && newSoundCount > 0" style="text-align: center">
+                <a href="#" onclick="return false;" ng-click="loadStream('true')">有{{newSoundCount}}条新上传的声音，请点此刷新<i class="icon-refresh"></i></a>
+            </div>
+
             <!--Body content-->
             <div ng-repeat="sound in sounds" ng-controller="streamCtrl">
                 <div id="sound_{{sound.id}}" class='sound_item'>
@@ -38,7 +44,7 @@
                             <div id="sound_commentbox_{{sound.id}}" class="hide">
                                 <input type="text" id="sound_commentbox_input_{{sound.id}}" class="input-block-level"
                                        placeholder="请留下您的评论...">
-                                <input type="hidden" id="sound_comment_point_{{sound.id}}">
+                                <input type="hidden" id="sound_comment_point_{{sound.id}}" value="-1">
                             </div>
                             <a href="#" class="button button-small button-rounded button-flat action-button"
                                onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i>
@@ -67,21 +73,21 @@
             </div>
 
 
-            <div class="{{loadClass}}" style="text-align: center">
+            <div ng-show="isloading" style="text-align: center">
                 <i class="icon-spinner icon-spin icon-large"></i> 努力加载中...
             </div>
 
-            <div class="{{noSoundMsg}}" style="position:absolute; top:40%; left:25%;">
+            <div  ng-show="sounds.length == 0 && $routeParams.userId == UserService.getCurUserAlias() && !$routeParams.q" style="position:absolute; top:40%; left:25%;">
                 您还没有推送的声音流，发现自己的<a href="index.html#/interest">乐趣</a>，将有更多声音推送。
             </div>
-            <div class="{{noSearchMsg}}" style="position:absolute; top:40%; left:35%;">
+            <div  ng-show="sounds.length == 0 && $routeParams.q"  style="position:absolute; top:40%; left:35%;">
                 没有找到结果，请尝试其他关键词
             </div>
         </div>
 
-
         <div class="span3" ng-controller="recommandUserCtrl">
-            <div class="affix" style="width: 23%">
+            <div class="affix" style="width: 20%">
+                <div style="padding-bottom: 15px;height:150px">
                 <legend style="font-size: 18px">为您推荐的用户
                     <i style="cursor:pointer" ng-show="recommendUsers.length > 0"
                        class='button button-small button-pill button-flat'
@@ -90,7 +96,7 @@
                 <div class="{{msgClass}}" style="padding-bottom: 10px">
                     {{msg}}
                 </div>
-                <div>
+                <div ng-if="recommendUsers.length > 0">
                     <div ng-repeat="recommendUser in recommendUsers" style="float:left" ng-click="toogleFollow()">
                         <div style="text-align:center; padding-right: 8px; height: 90px">
                             <div class="user {{recommendUser.class}}">
@@ -105,8 +111,38 @@
                         </div>
                     </div>
                 </div>
+
+                <div ng-if="recommendUsers.length == 0" style="padding-left: 15px">
+                    暂无用户推荐
+                </div>
+                </div>
+
+                <div style="padding-bottom: 15px;height:150px">
+                    <legend style="font-size: 18px">为您推荐的声音
+                    </legend>
+                    <div ng-if="recommendSounds.length > 0">
+                        <div ng-repeat="recommendSound in recommendSounds" style="float:left" ng-click="toogleFollow()">
+                            <div style="text-align:center; padding-right: 8px; height: 90px">
+                                <div>
+                                    <a href='{{recommendSound.route}}'>
+                                        <img style="width: 60px;height: 60px" ng-src="{{recommendSound.profile.poster.url}}">
+                                    </a>
+                                </div>
+                                </a>
+                                <div>
+                                    <a href='{{recommendSound.route}}'>{{recommendSound.profile.alias}}</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div ng-if="recommendSounds.length == 0" style="padding-left: 15px">
+                        暂无声音推荐
+                    </div>
+                </div>
             </div>
         </div>
 
     </div>
 </div>
+<ng-include src="'partials/footer.html'"></ng-include>
