--- a/app/css/app.css
+++ b/app/css/app.css
@@ -80,7 +80,7 @@
     vertical-align:middle;
 }
 
-.sound_player_button{
+icon-step-backward.sound_player_button{
     position:relative;
     top: 30%;
 }
