--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,23 +1,38 @@
-<div class="navbar" ng-controller="headerCtrl">
-    <div class="navbar-inner">
+<div class="navbar" ng-controller="headerCtrl" style="width: 100%;margin-bottom:0px;padding-bottom: 60px">
+    <div class="navbar-inner" style="width: 98%;position: fixed">
         <a class="brand" href="#" title="Wooice">
-            <img width="78"  src="img/logo.jpg"/>
+            <img width="78" src="img/logo.jpg"/>
         </a>
 
         <ul class="nav">
-            <li><a href="#">乐趣</a></li>
-            <li class="pull-right"><a href="#" onclick="return false;"  ng-click="goto('/stream/user/{{userAlias}}')">你的</a></li>
-            <form class="navbar-search" action="" style="padding-left: 30px">
+            <li><a href="#"><i class="icon-bullhorn"></i></a></li>
+            <li class="pull-right"
+                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);"><a
+                    href="#" onclick="return false;"
+                    ng-click="goto('/stream/user/{{userAlias}}')"><i class="icon-eye-open"></i></a></li>
+            <form class="navbar-search" action=""
+                  style="padding-left: 30px;border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
+                <span class="add-on"><i class="icon-search" style="color:gray"></i></span>
                 <input type="text" class="search-query span2" placeholder="寻找一段声音" ng-model="q" id="search_box">
             </form>
         </ul>
 
         <ul class="nav pull-right">
-            <li><a  href="#" onclick="return false;"  ><i style="cursor:pointer;color:white" id='sound_player_button_global'
-                   class='sound_player_button icon-play' ng-click="togglePause()"></i></a></li>
-            <li ><a  href="#" onclick="return false;" ng-click="goto('/profile')" >设置</a></li>
-            <li><a  href="#" onclick="return false;"  ng-click="goto('/upload')" >上传</a></li>
-            <li ><a  href="#" onclick="return false;" ng-click="logout()" >注销</a></li>
+            <li><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_pre_global'
+                                                       class='icon-step-backward'
+                                                       ng-click="playPre()"></i></a></li>
+            <li><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5"
+                                                       id='sound_player_button_global'
+                                                       class='sound_player_button icon-play'
+                                                       ng-click="togglePause()"></i></a></li>
+            <li><a href="#" onclick="return false;"><i style="cursor:pointer;color:#e5e5e5" id='sound_player_next_global'
+                                                       class='icon-step-forward' ng-click="playNext()"></i></a>
+            </li>
+            <li style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);"><a
+                    href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-wrench"></i></a></li>
+            <li><a href="#" onclick="return false;" ng-click="goto('/upload')"><i class="icon-cloud-upload"></i></a>
+            </li>
+            <li><a href="#" onclick="return false;" ng-click="logout()"><i class="icon-signout"></i></a></li>
         </ul>
     </div>
 </div>
